<resources>
    <string name="app_name">AT Command</string>
    <string name="action_settings">Settings</string>
    <string name="btn_command_send">Send</string>
    <string name="btn_socket_connect">Connect</string>
    <string name="btn_socket_disconnect">Disconnect</string>
    <string name="btn_resp_clear">Clear</string>
    <string name="text_IP_hint">IP address</string>
    <string name="text_port_hint">port</string>
    <string name="btn_Confirm">Confirm</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="text_btn_name_hint">Name</string>
    <string name="text_btn_command_hint">Command</string>
    <string name="btn_get_temperature">Temperature Refresh</string>
    <string name="text_temperature_text">Temperature</string>
    <string name="text_temperature_getting">Getting</string>
    <string name="text_temperature_fail">Failed</string>
</resources>
